scrollbar fixed

--- a/css/scss/components/_general.scss
+++ b/css/scss/components/_general.scss
@@ -46,6 +46,10 @@ body {
         width: 1.5rem;
         background-color: $color-background;
 
+        @media #{$lg} {
+            width: 1rem;
+        }
+
         &-thumb {
             background-color: $color-active-secondary;
             border-radius: 0.5rem;
